--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
@@ -106,25 +107,25 @@
 <!-- Navbar End -->
 
 
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Blogs</h1>
-        <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a href="">Home</a></h6>
-            <h6 class="text-white m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-white m-0">Blogs</h6>
-        </div>
+   <!-- Page Header Start -->
+   <div class="container-fluid page-header">
+    <h1 class="display-3 text-uppercase text-white mb-3 wow fadeInUp" data-wow-delay="0.2s">Our Blogs</h1>
+    <div class="d-inline-flex text-white">
+        <h6 class="text-uppercase m-0 wow fadeInLeft" data-wow-delay="0.4s"><a href="index.html">Home</a></h6>
+        <h6 class="text-white m-0 px-3 wow fadeInUp" data-wow-delay="0.5s">/</h6>
+        <h6 class="text-uppercase text-white m-0 wow fadeInRight" data-wow-delay="0.6s">Blog</h6>
     </div>
-    <!-- Page Header Start -->
+</div>
+<!-- Page Header Start -->
 
 
     <!-- Blog Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 text-uppercase mb-4">Latest <span class="text-primary">Articles</span> From Our Blog Post</h1>
+            <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.2s">Latest <span class="text-primary">Articles</span> From Our Blog Post</h1>
         </div>
         <div class="row g-5">
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
             <div class="bg-yellow">
               <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
               <div class="p-4">
@@ -155,7 +156,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="bg-yellow">
               <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
               <div class="p-4">
@@ -187,7 +188,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
             <div class="bg-yellow">
               <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
               <div class="p-4">
@@ -218,7 +219,7 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-2.jpeg" alt="">
                     <div class="p-4">
@@ -236,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6  wow fadeInUp" data-wow-delay="0.5s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-3.jpeg" alt="">
                     <div class="p-4">
@@ -254,7 +255,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-1.webp" alt="">
                     <div class="p-4">
@@ -272,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-5.webp" alt="">
                     <div class="p-4">
@@ -290,7 +291,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6  wow fadeInUp" data-wow-delay="0.5s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-6.webp" alt="">
                     <div class="p-4">
@@ -308,7 +309,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-7.webp" alt="">
                     <div class="p-4">
@@ -351,15 +352,15 @@
     </div>
     <!-- Blog End -->
 
-     <!-- Location Start -->
-     <div class="container-fluid bg-light overflow-hidden py-2 px-lg-0">
+    <!-- Location Start -->
+    <div class="container-fluid bg-white overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
-        <h1 class="display-5 text-uppercase text-center mb-4">
+        <h1 class="display-5 text-uppercase text-center mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
-          class="col-md-12 wow fadeInRight"
-          data-wow-delay="0.1s"
+          class="col-md-12 wow fadeInUp"
+          data-wow-delay="0.5s"
           style="height: 500px"
         >
           <div class="h-100">
@@ -474,6 +475,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
