--- a/project.html
+++ b/project.html
@@ -1236,15 +1236,15 @@
     </div>
     <!-- Portfolio End -->
 
-     <!-- Location Start -->
-     <div class="container-fluid bg-light overflow-hidden py-2 px-lg-0">
+      <!-- Location Start -->
+    <div class="container-fluid bg-yellow overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
-        <h1 class="display-5 text-uppercase text-center mb-4">
+        <h1 class="display-5 text-uppercase text-center mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
-          class="col-md-12 wow fadeInRight"
-          data-wow-delay="0.1s"
+          class="col-md-12 wow fadeInUp"
+          data-wow-delay="0.5s"
           style="height: 500px"
         >
           <div class="h-100">
